crates/rspack_error/tests/out_of_order/multi_json_syntax_error/fixtures__multi_json_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: multi_json_syntax_error
---
error[json]: Json parsing error
  ┌─ tests/out_of_order/multi_json_syntax_error/a.json:3:1
  │
1 │ {
2 │   "a"
3 │ }
  │ ^ Unexpected character }

error[json]: Json parsing error
  ┌─ tests/out_of_order/multi_json_syntax_error/b.json:1:10
  │
1 │ "测试utf8\"
  │            ^ Unexpected end of JSON


